--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="light">#FFFFFF</color>
+    <color name="lightDark">#c9c9c9</color>
+    <color name="lightTranslucent">#E6FFFFFF</color>
+
+    <color name="dark">#363636</color>
+    <color name="darkDark">#6c6c6c</color>
+    <color name="darkTranslucent">#E6363636</color>
+
+    <color name="hardDark">#000000</color>
+    <color name="hardDarkTranslucent">#E6000000</color><!--TODO: hard dark potrzebuje swojego koloru dark-->
+
+    <color name="accent">#3affa0</color>
+    <color name="accent2">#fff83a</color>
+    <color name="accent3">#ff8f3a</color>
+
+    <color name="background">#00DEFF</color>
 </resources>
