--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -35,4 +35,19 @@
         <item name="android:textSize">@dimen/size_text_normal</item>
     </style>
 
+    <style name="CardViewStandard">
+        <item name="android:minHeight">@dimen/height_card</item>
+        <item name="android:layout_margin">@dimen/margin_card</item>
+        <item name="cardCornerRadius">@dimen/corner_radius_card</item>
+        <item name="android:backgroundTint">?attr/colorPrimaryG</item>
+        <item name="android:background">?android:attr/actionBarItemBackground</item>
+    </style>
+
+    <style name="FAB">
+        <item name="android:tint">?attr/colorAccentG</item>
+        <item name="android:backgroundTint">?attr/colorPrimaryG</item>
+        <item name="rippleColor">?attr/colorPrimaryDarkG</item>
+        <item name="borderWidth">0dp</item>
+    </style>
+
 </resources>
