--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <item name="colorPrimaryG">@color/dark</item>
         <item name="colorPrimaryDarkG">@color/darkDark</item>
         <item name="colorPrimaryTranslucentG">@color/darkTranslucent</item>
