--- a/res/layout/view_records.xml
+++ b/res/layout/view_records.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/title"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</CardView>
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_standard"
+    style="@style/AllClickable"/>
